# fintradex

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README-CICD.md  README.md  README_instructions.md  SECURITY.md  docker-compose.yml  fintradex_plain_chain_spec.json  para-state  para-wasm  plain_chain_spec.json  raw_chain_spec.json  single_node_test_chain.md  twitter_announcement.md  zombienet-omni-node.toml  zombienet.toml
docs/: Fintra_Tokenomic_ Key_Points.docx  env-setup.md  features.md
node/: Cargo.toml  README.md  build.rs
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  eth.rs  main.rs  service.rs
node/src/rpc/: eth.rs  mod.rs
runtime/: Cargo.toml  README.md  build.rs
runtime/src/: apis.rs  benchmarking.rs  benchmarks.rs  constants.rs  genesis_config_presets.rs  lib.rs  precompiles.rs  rpc.rs
runtime/src/common/: mod.rs  xcm_config_common.rs
runtime/src/configs/: asset_conversion.rs  asset_rate.rs  assets.rs  aura.rs  balances.rs  base_fee.rs  beefy.rs  bounties.rs  broker.rs  child_bounties.rs  collective.rs  contracts.rs  democracy.rs  election.rs  ethereum.rs  evm.rs  fellowship.rs  grandpa.rs  im_online.rs  indices.rs  ismp.rs  membership.rs  mmr.rs  mod.rs  multisig.rs  nomination_pool.rs  parameter.rs  preimage.rs  ranked.rs  refrenda.rs  salary.rs  scheduler.rs  session.rs  staking.rs  sudo.rs  system.rs  technical_collective.rs  timestamp.rs  transaction_payment.rs  treasury.rs  (+5 more)
runtime/src/weights/: block_weights.rs  extrinsic_weights.rs  mod.rs  paritydb_weights.rs  rocksdb_weights.rs
