[package]
name = "fintradex-node"
description = "A parachain node template built with Substrate and Cumulus, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
clap = { features = ["derive"], workspace = true }
log = { workspace = true, default-features = true }
codec = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
jsonrpsee = { features = ["server"], workspace = true }
futures = { workspace = true }
serde_json = { workspace = true, default-features = true }
docify = { workspace = true }
color-print = { workspace = true }
polkadot-sdk = { workspace = true, features = ["node"] }
fintradex-runtime.workspace = true
sc-tracing.workspace = true
sc-tracing.default-features = true
prometheus-endpoint.workspace = true
prometheus-endpoint.default-features = true


[features]
default = ["std"]
std = [
	"log/std",
	"fintradex-runtime/std",
	"polkadot-sdk/std",
]
runtime-benchmarks = [
	"fintradex-runtime/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"fintradex-runtime/try-runtime",
	"polkadot-sdk/try-runtime",
]
